getting data from Weather Underground & ShopStyle

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<!-- ljzfbalmd -->
-<%= yield %>
+  <div class="container">
 
+  <!-- ljzfbalmd -->
+  <%= yield %>
+  
+  </div>
 </body>
 </html>
