--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,26 @@
  *
  *= require_tree .
  *= require_self
- */
+*/
+h1 {
+  font-family: "acta-display";
+}
+.navbar {
+  border:none;
+}
+.container-fluid {
+background-color: black;
+height: 90px;
+/*border-color: none;*/
+}
+.navbar-default .navbar-text {
+  color: white;
+  padding-top: 60px;
+}
+
+.navbar-fixed-top {
+top: 0;
+/*border-width: 0 0 0px;*/
+}
+
+
