--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -1,11 +1,19 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, :as => resource_name, :url => user_registration_path) do |f| %>
+  <div class="field">
+    <%= f.label :first_name, autofocus: true  %><br />
+    <%= f.text_field :first_name %>
+  </div>
 
   <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name %>
+  </div>
+
+    <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.text_field :email %>
   </div>
 
   <div class="field">
@@ -25,5 +33,3 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
