fixed some styling and login and signin

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,5 +13,15 @@
  *= require_tree .
  *= require_self
  */
-@import "bootstrap-sprockets";
+
+.navbar-default .navbar-text {
+  color: white;
+  padding-top: 60px;
+}
+.navbar-default .navbar-nav>li>a {
+  color:white;
+  padding-top: 60px;
+}
+/*@import "bootstrap-sprockets";
 @import "bootstrap";
+*/
