passing user info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
  <%= render "partials/header" %>
  <%= render 'layouts/messages' %>    
  <%= yield %>        
- <%= render "partials/footer" %>
+ <%#= render "partials/footer" %>
 
 
