--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-<%= link_to "Go to Style Page", styles_path(@user) %>
+<%= link_to "Go to Style Page", styles_path %>
