--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -21,9 +21,12 @@
     <%= f.label :age %><br />
     <%= f.text_field :age %>
   </div>
+
+
   <div class="field">
-    <%= f.label :sex %><br />
-    <%= f.text_field :sex %>
+ <%= f.radio_button :sex, "F" %> Female
+  <%= f.radio_button :sex, "M" %> Male
+
   </div>
     <div class="field">
     <%= f.label :email %><br />
