--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,12 +1,3 @@
-<h3>Hello <span style="color:blue;"><%= @user.first_name %>,</span> Here is what we suggest for you today!</h3><br>
-
-
-
-
-<%#= form_for @user, url:"" , id:"saveStyleForm" do |f| %>
-<!-- styles_path(@user) -->
-<!-- url: [@user, @whatever] -->
-
 <div class="row" id="weather">
   <!-- weather info -->
   <div id="weather">
@@ -34,24 +25,14 @@
       </span>
       <br>
     </div> 
-<%# end %> 
 
     <div class="col-md-3 col-lg-2 col-sm-5">
+
 <!-- GOOGLE SEARCH PAGE -->
-
-<!-- <%#= 
-form_tag(styles_show_path, class:"form-inline") do 
-  %> -->
-
-
   <div class="form-group form-inline">
     <input type="text" name="location" value="" placeholder=" e.g., San Francisco, CA or 94101" autofocus="true" size="30" id="location"><button class="btn btn-success" id="changeLoc">Change</button>
   </div> 
-
-    
-
     </div>
-
   </div>  
 </div>
 
@@ -63,12 +44,9 @@ form_tag(styles_show_path, class:"form-inline") do
         <h2>picked style</h2>
         <div id="selectedDress"></div>
         <div id="selectedTop"></div>
-        <br>
         <div id="selectedBottom"></div>                
       </div>
     </div>
-
-
 
   <!-- space btw two cols in Row -->
   <div class="col-md-1 col-lg-1"></div>
@@ -76,12 +54,16 @@ form_tag(styles_show_path, class:"form-inline") do
   <!-- suggested style below -->
   <div class="col-md-7 col-lg-7 col-sm-7" id="suggestedStyle">
     <h2>Suggested styles</h2>
+    <div id="gender"><%= @user.sex %></div>
     <span class="small">Click a outfit you like from below</span>
+
+  <% if @user.sex =='F' %>
     <br>
     <div style="border-width: 1px; border-style: solid;">
       <div class="styleHeader text-center" style="border-width: 1px; border-style: solid;">Dresses</div>
       <div id="dress" style="border-width: 1px; border-style: solid;"></div>
     </div>
+  <% end %>
     <br>
     <div style="border-width: 1px; border-style: solid;">
       <div class="styleHeader text-center" style="border-width: 1px; border-style: solid;">Tops</div>
