Styling with Collaspable

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -9,10 +9,23 @@ a {
 
 h2{
 color: black;
+letter-spacing: 0.1em;
 text-transform: uppercase;
-
+font-weight: 500;
 }
 
+
+h5{
+color: black;
+letter-spacing: 0.2em;
+text-transform: uppercase;
+}
+body{
+  background-color:white;
+}
+div.container{
+  width: 1600px;
+}
 .field{
   padding-top: 10px;
 }
@@ -66,6 +79,13 @@ color: white;
 
 }
 
+/*styleHeader*/
+
+
+div .styleHeader {
+  background-color: #b0c4de;
+  color: white;
+}
 
 /*flash*/
 .alert-error {
