--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="container">
+    <div class="container1">
       <% if user_signed_in? %>
           <div class="navbar-header">
             <ul class=" nav navbar-nav navbar-left">
@@ -27,8 +27,12 @@
             </ul>
           </div>
         <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Go to Style Page", styles_path %></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-              <% else %>
+        <% else %>
+        <ul class=" nav navbar-nav navbar-left">
+        <p class="navbar-text">Style Me</p>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
         <li>
         <%= link_to "Log In", new_user_session_path %>
