--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div id="login">
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => user_registration_path) do |f| %>
@@ -54,3 +55,4 @@
 <% end %>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 <%= render "devise/shared/links" %>
+</div>
