--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -31,7 +31,7 @@
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <% else %>
         <ul class=" nav navbar-nav navbar-left">
-        <p class="navbar-text">Style Me</p>
+        <li><a href="/" id= "txt">STYLE ME</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
         <li>
