--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -11,7 +11,9 @@
   letter-spacing: 0.09em;
 
 }
-
+div#weather.row{
+    margin-left: 40px;
+}
 #weather {overflow: hidden;
   margin-top: 10px;}
 
